# ADVT

./: README.md
ADVT/: CMakeLists.txt  main.cpp
ADVT/include/: ADVT.hpp  ADVTOptions.hpp  ActionEdge.hpp  BeliefNode.hpp  BeliefNodeData.hpp  BoundingSphere.hpp  DiameterEstimator.hpp  DistanceMeasure.hpp  ObservationComparator.hpp  ObservationEdge.hpp  ParticleFilter.hpp  Partition.hpp  PartitionAgent.hpp  PartitionNode.hpp  Tree.hpp  TreeElement.hpp  TreeElementData.hpp
ADVT/src/: ADVT.cpp  ActionEdge.cpp  BeliefNode.cpp  BeliefNodeData.cpp  BoundingSphere.cpp  DiameterEstimator.cpp  DistanceMeasure.cpp  LineSegmentPartition.cpp  ObservationEdge.cpp  ParticleFilter.cpp  Partition.cpp  PartitionAgent.cpp  PartitionNode.cpp  RectanglePartition.cpp  Tree.cpp  TreeElement.cpp  TreeElementData.cpp  VDPPartition.cpp  VoronoiPartition.cpp
ProblemScenarios/: CMakeLists.txt  setup.sh
ProblemScenarios/Parking/: CMakeLists.txt
ProblemScenarios/Parking/heuristicPlugin/: CMakeLists.txt  ParkingHeuristicOptions.hpp  ParkingHeuristicPlugin.cpp
ProblemScenarios/Parking/initialBeliefPlugin/: CMakeLists.txt  ParkingInitialBeliefOptions.hpp  ParkingInitialBeliefPlugin.cpp
ProblemScenarios/Parking/observationPlugin/: CMakeLists.txt  ParkingObservationPlugin.cpp  ParkingObservationPluginOptions.hpp
ProblemScenarios/Parking/rewardPlugin/: CMakeLists.txt  ParkingRewardOptions.hpp  ParkingRewardPlugin.cpp
ProblemScenarios/Parking/shared/: VehicleState.hpp  VehicleUserData.hpp
ProblemScenarios/Parking/terminalPlugin/: CMakeLists.txt  ParkingTerminalPlugin.cpp
ProblemScenarios/Parking/transitionPlugin/: CMakeLists.txt  ParkingTransitionPlugin.cpp  ParkingTransitionPluginOptions.hpp
ProblemScenarios/Pushbox/: CMakeLists.txt
ProblemScenarios/Pushbox/heuristicPlugin/: CMakeLists.txt  PushboxHeuristicOptions.hpp  PushboxHeuristicPlugin.cpp
ProblemScenarios/Pushbox/initialBeliefPlugin/: CMakeLists.txt  PushboxInitialBeliefOptions.hpp  PushboxInitialBeliefPlugin.cpp
ProblemScenarios/Pushbox/observationPlugin/: CMakeLists.txt  PushboxObservationPlugin.cpp  PushboxObservationPluginOptions.hpp
ProblemScenarios/Pushbox/rewardPlugin/: CMakeLists.txt  PushboxRewardOptions.hpp  PushboxRewardPlugin.cpp
ProblemScenarios/Pushbox/shared/: BearingObservation.hpp  Map2d.hpp  PushboxStateUserData.hpp  TruncatedNormal.hpp
ProblemScenarios/Pushbox/terminalPlugin/: CMakeLists.txt  PushboxTerminalPlugin.cpp
ProblemScenarios/Pushbox/transitionPlugin/: CMakeLists.txt  PushboxTransitionPlugin.cpp  PushboxTransitionPluginOptions.hpp
ProblemScenarios/SensorPlacement/heuristicPlugin/: CMakeLists.txt  SensorPlacementHeuristicOptions.hpp  SensorPlacementHeuristicPlugin.cpp
ProblemScenarios/SensorPlacement/initialBeliefPlugin/: CMakeLists.txt  SensorPlacementInitialBeliefOptions.hpp  SensorPlacementInitialBeliefPlugin.cpp
ProblemScenarios/SensorPlacement/observationPlugin/: CMakeLists.txt  SensorPlacementObservationPlugin.cpp  SensorPlacementObservationPluginOptions.hpp
ProblemScenarios/SensorPlacement/rewardPlugin/: CMakeLists.txt  SensorPlacementRewardOptions.hpp  SensorPlacementRewardPlugin.cpp
ProblemScenarios/SensorPlacement/shared/: GoalParser.hpp  SensorPlacementUserData.hpp
ProblemScenarios/SensorPlacement/terminalPlugin/: CMakeLists.txt  SensorPlacementTerminalPlugin.cpp
ProblemScenarios/SensorPlacement/transitionPlugin/: CMakeLists.txt  SensorPlacementTransitionPlugin.cpp  SensorPlacementTransitionPluginOptions.hpp
ProblemScenarios/VDPTag/: CMakeLists.txt
ProblemScenarios/VDPTag/heuristicPlugin/: CMakeLists.txt  VDPTagHeuristicPlugin.cpp
ProblemScenarios/VDPTag/initialBeliefPlugin/: CMakeLists.txt  VDPTagInitialBeliefPlugin.cpp
ProblemScenarios/VDPTag/observationPlugin/: CMakeLists.txt  VDPTagObservationPlugin.cpp
ProblemScenarios/VDPTag/rewardPlugin/: CMakeLists.txt  VDPTagRewardPlugin.cpp
ProblemScenarios/VDPTag/shared/: Utils.hpp  VDPTagDynamics.hpp  VDPTagObservation.hpp  (+2 more)
ProblemScenarios/cfg/: Parking2D.cfg  Parking3D.cfg  Pushbox2D.cfg  Pushbox3D.cfg  SensorPlacement10.cfg  SensorPlacement12.cfg  SensorPlacement6.cfg  SensorPlacement8.cfg  VDPTag.cfg
(+29 files in other folders)
